--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bulma": "^0.8.0",
     "cloudinary-core": "^2.8.0",
+    "disqus-react": "^1.0.7",
     "gatsby": "^2.13.31",
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-google-analytics": "^2.1.29",
