--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "gatsby-plugin-goatcounter": "^0.4.0",
     "prettier": "^1.19.1"
   }
 }
