--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.1.42",
     "gatsby-remark-relative-images": "^0.2.3",
+    "gatsby-remark-video": "^1.2.5",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.48",
     "gatsby-transformer-sharp": "^2.3.13",
