--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "npm run develop",
     "build": "npm run clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
+    "format": "prettier --write \"{gatsby-*.js,src/**/*.{js,css,scss}}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
