--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cloudinary-core": "^2.8.0",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-feed": "^2.5.11",
     "gatsby-plugin-google-analytics": "^2.1.33",
     "gatsby-plugin-netlify": "^2.1.31",
     "gatsby-plugin-netlify-cache": "^1.2.0",
