--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.1.42",
     "gatsby-remark-relative-images": "^0.2.3",
-    "gatsby-remark-video": "^1.2.5",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.48",
     "gatsby-transformer-sharp": "^2.3.13",
@@ -44,6 +43,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "unist-util-visit": "^2.0.3",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
